k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
      - name: api
        image: alphata/api:latest
        resources:
            limits:
              cpu: 100m
              memory: 128Mi
        ports:
        - containerPort: 7000
