k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
            claimName: db-persistent-volume-claim
      containers:
      - name: postgres
        image: postgres:latest
        resources:
            limits:
              cpu: 100m
              memory: 256Mi
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres
