k8s/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: web
        image: alphata/web:latest
        resources:
            limits:
              cpu: 100m
              memory: 128Mi
        ports:
        - containerPort: 3000
