k8s/api-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
  - port: 7000
    targetPort: 7000
